kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_json_with_filepath.snap
---
source: tools/src/vet/tests.rs
assertion_line: 215
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 12,
  "filename": "<workspace>/test.k.json",
  "line": 1,
  "node": {
    "data": {
      "args": [],
      "config": {
        "column": 0,
        "end_column": 1,
        "end_line": 12,
        "filename": "<workspace>/test.k.json",
        "line": 1,
        "node": {
          "data": {
            "items": [
              {
                "column": 0,
                "end_column": 1,
                "end_line": 12,
                "filename": "<workspace>/test.k.json",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 13,
                    "end_line": 4,
                    "filename": "<workspace>/test.k.json",
                    "line": 4,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"address\"",
                        "value": "address"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 15,
                    "end_column": 5,
                    "end_line": 7,
                    "filename": "<workspace>/test.k.json",
                    "line": 4,
                    "node": {
                      "data": {
                        "items": [
                          {
                            "column": 15,
                            "end_column": 5,
                            "end_line": 7,
                            "filename": "<workspace>/test.k.json",
                            "line": 4,
                            "node": {
                              "insert_index": -1,
                              "key": {
                                "column": 8,
                                "end_column": 14,
                                "end_line": 6,
                                "filename": "<workspace>/test.k.json",
                                "line": 6,
                                "node": {
                                  "data": {
                                    "is_long_string": false,
                                    "raw_value": "\"city\"",
                                    "value": "city"
                                  },
                                  "type": "StringLit"
                                }
                              },
                              "operation": "Union",
                              "value": {
                                "column": 16,
                                "end_column": 24,
                                "end_line": 6,
                                "filename": "<workspace>/test.k.json",
                                "line": 6,
                                "node": {
                                  "data": {
                                    "is_long_string": false,
                                    "raw_value": "\"London\"",
                                    "value": "London"
                                  },
                                  "type": "StringLit"
                                }
                              }
                            }
                          },
                          {
                            "column": 15,
                            "end_column": 5,
                            "end_line": 7,
                            "filename": "<workspace>/test.k.json",
                            "line": 4,
                            "node": {
                              "insert_index": -1,
                              "key": {
                                "column": 8,
                                "end_column": 16,
                                "end_line": 5,
                                "filename": "<workspace>/test.k.json",
                                "line": 5,
                                "node": {
                                  "data": {
                                    "is_long_string": false,
                                    "raw_value": "\"street\"",
                                    "value": "street"
                                  },
                                  "type": "StringLit"
                                }
                              },
                              "operation": "Union",
                              "value": {
                                "column": 18,
                                "end_column": 37,
                                "end_line": 5,
                                "filename": "<workspace>/test.k.json",
                                "line": 5,
                                "node": {
                                  "data": {
                                    "is_long_string": false,
                                    "raw_value": "\"10 Downing Street\"",
                                    "value": "10 Downing Street"
                                  },
                                  "type": "StringLit"
                                }
                              }
                            }
                          }
                        ]
                      },
                      "type": "Config"
                    }
                  }
                }
              },
              {
                "column": 0,
                "end_column": 1,
                "end_line": 12,
                "filename": "<workspace>/test.k.json",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 9,
                    "end_line": 3,
                    "filename": "<workspace>/test.k.json",
                    "line": 3,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"age\"",
                        "value": "age"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 11,
                    "end_column": 13,
                    "end_line": 3,
                    "filename": "<workspace>/test.k.json",
                    "line": 3,
                    "node": {
                      "data": {
                        "binary_suffix": null,
                        "value": {
                          "data": 43,
                          "type": "Int"
                        }
                      },
                      "type": "NumberLit"
                    }
                  }
                }
              },
              {
                "column": 0,
                "end_column": 1,
                "end_line": 12,
                "filename": "<workspace>/test.k.json",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 10,
                    "end_line": 2,
                    "filename": "<workspace>/test.k.json",
                    "line": 2,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"name\"",
                        "value": "name"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 12,
                    "end_column": 22,
                    "end_line": 2,
                    "filename": "<workspace>/test.k.json",
                    "line": 2,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"John Doe\"",
                        "value": "John Doe"
                      },
                      "type": "StringLit"
                    }
                  }
                }
              },
              {
                "column": 0,
                "end_column": 1,
                "end_line": 12,
                "filename": "<workspace>/test.k.json",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 12,
                    "end_line": 8,
                    "filename": "<workspace>/test.k.json",
                    "line": 8,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"phones\"",
                        "value": "phones"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 14,
                    "end_column": 5,
                    "end_line": 11,
                    "filename": "<workspace>/test.k.json",
                    "line": 8,
                    "node": {
                      "data": {
                        "ctx": "Load",
                        "elts": [
                          {
                            "column": 8,
                            "end_column": 21,
                            "end_line": 9,
                            "filename": "<workspace>/test.k.json",
                            "line": 9,
                            "node": {
                              "data": {
                                "is_long_string": false,
                                "raw_value": "\"+44 1234567\"",
                                "value": "+44 1234567"
                              },
                              "type": "StringLit"
                            }
                          },
                          {
                            "column": 8,
                            "end_column": 21,
                            "end_line": 10,
                            "filename": "<workspace>/test.k.json",
                            "line": 10,
                            "node": {
                              "data": {
                                "is_long_string": false,
                                "raw_value": "\"+44 2345678\"",
                                "value": "+44 2345678"
                              },
                              "type": "StringLit"
                            }
                          }
                        ]
                      },
                      "type": "List"
                    }
                  }
                }
              }
            ]
          },
          "type": "Config"
        }
      },
      "kwargs": [],
      "name": {
        "column": 0,
        "end_column": 1,
        "end_line": 12,
        "filename": "<workspace>/test.k.json",
        "line": 1,
        "node": {
          "ctx": "Load",
          "names": [
            {
              "column": 0,
              "end_column": 1,
              "end_line": 12,
              "filename": "<workspace>/test.k.json",
              "line": 1,
              "node": "test"
            }
          ],
          "pkgpath": ""
        }
      }
    },
    "type": "Schema"
  }
}
