kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_json_with_str-3.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 1,
  "filename": "",
  "line": 1,
  "node": {
    "data": {
      "binary_suffix": null,
      "value": {
        "data": 1,
        "type": "Int"
      }
    },
    "type": "NumberLit"
  }
}
