kclvm/tools/src/vet/snapshots/kclvm_tools__vet__tests__test_expr_builder__build_json_with_str-7.snap
---
source: tools/src/vet/tests.rs
expression: got_ast_json_str
---
{
  "column": 0,
  "end_column": 1,
  "end_line": 3,
  "filename": "",
  "line": 1,
  "node": {
    "data": {
      "args": [],
      "config": {
        "column": 0,
        "end_column": 1,
        "end_line": 3,
        "filename": "",
        "line": 1,
        "node": {
          "data": {
            "items": [
              {
                "column": 0,
                "end_column": 1,
                "end_line": 3,
                "filename": "",
                "line": 1,
                "node": {
                  "insert_index": -1,
                  "key": {
                    "column": 4,
                    "end_column": 10,
                    "end_line": 2,
                    "filename": "",
                    "line": 2,
                    "node": {
                      "data": {
                        "is_long_string": false,
                        "raw_value": "\"flag\"",
                        "value": "flag"
                      },
                      "type": "StringLit"
                    }
                  },
                  "operation": "Union",
                  "value": {
                    "column": 12,
                    "end_column": 16,
                    "end_line": 2,
                    "filename": "",
                    "line": 2,
                    "node": {
                      "data": {
                        "value": "True"
                      },
                      "type": "NameConstantLit"
                    }
                  }
                }
              }
            ]
          },
          "type": "Config"
        }
      },
      "kwargs": [],
      "name": {
        "column": 0,
        "end_column": 1,
        "end_line": 3,
        "filename": "",
        "line": 1,
        "node": {
          "ctx": "Load",
          "names": [
            {
              "column": 0,
              "end_column": 1,
              "end_line": 3,
              "filename": "",
              "line": 1,
              "node": "only_with_bool"
            }
          ],
          "pkgpath": ""
        }
      }
    },
    "type": "Schema"
  }
}
